
Release 5.2.2 (unreleased)
==========================

Bug fixes
---------

- Fix memory leaks in parameters check.

- Fix in GUI for gas combustion model. Use variable name instead of label to get
  numerical scheme.

- Fix in GUI of turbulence model view initalization by moving out of
  turbulence model slot the view initalization code.

- Fix in TVD convective schemes in parallel mode.

- Fix crash when using multiple GUI-defined scalar balance zones.

- Fix memory leak leading to crash in legacy porosity model.

- Lagrangian Module:
  * Fix crash in restart when not reading previous statistics.
  * Fix errors in deposition/reentrainment model.
  * Fix division by 0 in boundary stats.

- Lagrangian Module: fix crash in some cases with no deposition model.

- Fix missing free surface boundary movement in some cases depending on
  which pages were visited in the GUI (GitHub issue #27).

- Fix bug in automatic turbulent BCs. They were only set if not already
  initialized. Cases calling turbulent_bc_inlet_k_eps in user sources to
  overwrite GUI settings were impacted.

- Fix coherency check of slope test indicator with SIMPLE algorithm.

- Compressible: fix density time scheme in transported passive scalar/vector
  balance to ensure conservativity with compressible algorithm.

- Avoid error preventing run when checking remaining time using SLURM job array.

- Fixes for parallel runs in sedimentation source term with humid atmosphere
  model.

- Fix initialisation of some turbulence constants. Constant/Models concerned:
  * sigmae (for all RSM models)
  * csrij (EB-RSM model).

- Fix allocation of pmappers to scalar fields in atmospheric aerosols model.

- Fix allocation size for values at injection in case of mass source terms
  with coupled Reynolds stress solver.

- GUI: fix missing update of modified scalar names for groundwater flows.

- GUI: fix loss of previous deactivated wall function setting when reopened.
